# ai-contract

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml  文档审查报告-代码示例与命名规范检查_2025-11-30-0930.md  易标AI_详细功能报告.md
.claude/claude-skills/: README.md  skill.md
apps/backend-python/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/backend-python/app/: __init__.py  config.py  main.py
apps/backend-python/app/api/v1/: health.py
apps/backend-python/requirements/: base.txt  dev.txt  prod.txt
apps/frontend/: .env.development  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
docker/postgres/: init.sql
docs/: README.md  文档编号方案_2025-11-28-0800.md  文档迁移计划.md  文档重组计划_2025-11-28-0730.md
docs/01-原则指引/: Java代码规范.md  README.md  文档编写规范.md
docs/01-指引/: CLAUDE.md  README.md
docs/02-需求/: 18-用户手册与培训材料大纲.md
docs/02-需求定义/: 02-功能模块详解-INDEX.md  03-功能模块详解-INDEX.md  03-用户手册大纲.md  04-培训材料大纲.md
docs/03-架构/: 00-架构设计总览.md  02-数据库设计.md  03-API接口设计.md  05-AI能力层设计.md  06-部署架构设计.md  11-技术栈调整方案.md  15-数据安全与隐私保护方案.md  README.md  架构设计工作进度.md
docs/03-架构设计/: 00-架构设计总览.md  01-项目结构设计.md  03-业务架构设计.md  05-AI能力层设计.md  06-部署架构设计.md  07-运维架构设计.md  08-前端架构设计.md
docs/04-业务设计/: 00-业务设计索引.md  01-高级业务流程设计.md
docs/05-实现/: 04-实施计划与路线图.md  Docker环境验证完成报告_2025-11-26-1730.md  Python-AI服务实现计划.md  task-plan-python-ai-详细.md.BACKUP_20251127  task-plan.md  前端实现计划.md  基础设施实现计划.md  复用计划执行摘要.md  开发计划与路线图.md
docs/05-编码实现/: 00-总体实现计划.md  05-Java服务实现指南-索引.md  07-Python-AI服务实现指南-索引.md  Java服务实现计划.md  (+5 more)
scripts/: expand_page_sections.py  extract_biz_flow_from_docs.py  generate_biz_flow.py  generate_entities_from_db_design.py  generate_internal_apis_from_openapi.py  generate_pages_and_sections.py  generate_program_sql.py  generate_program_sql_v2.py  generate_roles_and_permissions.py  start-dev.sh  start-prod.sh  validate_and_fix.py  validate_json_with_schema.py  verify-services.sh
structured-requirements/: README.md  fix_validation_errors.py  独立文件验证成功报告_2025-11-27-final.md
方案文档/: 01-产品愿景总览.md  02-技术架构设计.md  03-功能模块详解.md  05-商业模式与市场策略.md  07-项目总结与下一步行动.md  08-技术架构详细实现.md  09-AI算法与模型设计.md  11-市场推广策略详细方案.md  14-开发环境配置指南.md  17-国际化扩展方案.md  19-方案综合评审报告.md  20-第二轮深度评审报告.md  21-第三轮战略评审报告.md  22-最终批判性评审报告.md  README.md
(+1470 files in other folders)
